deploy/apps/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: app
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      hostAliases:
        - ip: "10.43.0.1"
          hostnames:
            - "keycloak.localhost"
      containers:
        - name: api-gateway
          image: micro/api-gateway:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 5005
              name: jdwp
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 512Mi
